added data files

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Ayomide Bamigboye Temitayo aycom366"
-      content="Temitayo's PortFolio Website"
+      content="Ayomide Bamigboye Temitayo's PortFolio Website nicknamed: aycom366"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
